# clawguard

./: .gitignore  README.md  pyproject.toml
clawguard/: __init__.py  cli.py  report.py
clawguard/scanners/: __init__.py  permissions.py  ports.py  secrets.py
